--- a/Imagenes/README
+++ b/Imagenes/README
@@ -1,1 +1,1 @@
-
+En esta carpeta se encuentran las imagenes correspondientes a la creacion de un ambiente "tf2" con (tensorflow, jupyter y jupyterlab)
